URL in "Current Media Information" dialog is not cleared

If meta information of a media file contains an URL, it is shown in the "Current Media Information" dialog as clickable link. But once the media file is closed, this link is not removed (unlike everything else in this dialog).

I think it is as simple as adding this line to info_panels.cpp:MetaPanel::clear():

    lblURL->clear();