Qt: Fix metadata URL not cleared

Closes #22752